--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+gnuplot = "0.0.43"
 itertools = "0.12.1"
 ndarray = "0.15.6"
 plotters = "0.3.5"
